--- a/index.html
+++ b/index.html
@@ -853,7 +853,7 @@
 
             <!-- 3. AI DASHBOARD CARD (Right) -->
             <div class="hero-dashboard-card">
-                <div class="dashboard-card-content">
+                 <div class="dashboard-card-content" style="height:300px; overflow-y:auto; overflow-x:hidden; padding-right:6px;">
                     <h3 class="text-white">AI DASHBOARD</h3>
                     <p class="text-xs text-white opacity-80 mb-4">
                         Unlock your potential with personalized insights.
@@ -2193,3 +2193,4 @@
 </body>
 
 </html>
+
